--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container-fluid text-center mt-5">
       <h1>You're not gonna belive me but,</h1>
-      <h2 id="the_excuse">my dog ate my homework</h2>
+      <h2 id="the_excuse">my dog ate my homework while I peed</h2>
     </div>
 
     <script type="text/javascript" src="bundle/bundle.js"></script>
